--- a/Zenspace/Zenspace/Info.plist
+++ b/Zenspace/Zenspace/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>0.6</string>
+	<string>0.8</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -67,5 +67,7 @@
 	</array>
 	<key>kTCCServiceMediaLibrary</key>
 	<string>uDynamo</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Scan Card</string>
 </dict>
 </plist>
