--- a/Zenspace/Zenspace/Info.plist
+++ b/Zenspace/Zenspace/Info.plist
@@ -39,6 +39,15 @@
 		<string>CircularStd-BookItalic.otf</string>
 		<string>CircularStd-Medium.otf</string>
 		<string>CircularStd-MediumItalic.otf</string>
+        <string>Roboto-Black.ttf</string>
+        <string>Roboto-BlackItalic.ttf</string>
+        <string>Roboto-Bold.ttf</string>
+        <string>Roboto-BoldItalic.ttf</string>
+        <string>Roboto-Italic.ttf</string>
+        <string>Roboto-Light.ttf</string>
+        <string>Roboto-Medium.ttf</string>
+        <string>Roboto-Regular.ttf</string>
+        <string>Roboto-Thin.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
