--- a/Zenspace/Zenspace/Info.plist
+++ b/Zenspace/Zenspace/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>0.8</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -27,6 +27,8 @@
 	</dict>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>Connect to BLE Readers</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Scan Card</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>uDynamo Connection</string>
 	<key>UIAppFonts</key>
@@ -39,15 +41,15 @@
 		<string>CircularStd-BookItalic.otf</string>
 		<string>CircularStd-Medium.otf</string>
 		<string>CircularStd-MediumItalic.otf</string>
-        <string>Roboto-Black.ttf</string>
-        <string>Roboto-BlackItalic.ttf</string>
-        <string>Roboto-Bold.ttf</string>
-        <string>Roboto-BoldItalic.ttf</string>
-        <string>Roboto-Italic.ttf</string>
-        <string>Roboto-Light.ttf</string>
-        <string>Roboto-Medium.ttf</string>
-        <string>Roboto-Regular.ttf</string>
-        <string>Roboto-Thin.ttf</string>
+		<string>Roboto-Black.ttf</string>
+		<string>Roboto-BlackItalic.ttf</string>
+		<string>Roboto-Bold.ttf</string>
+		<string>Roboto-BoldItalic.ttf</string>
+		<string>Roboto-Italic.ttf</string>
+		<string>Roboto-Light.ttf</string>
+		<string>Roboto-Medium.ttf</string>
+		<string>Roboto-Regular.ttf</string>
+		<string>Roboto-Thin.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
@@ -76,7 +78,5 @@
 	</array>
 	<key>kTCCServiceMediaLibrary</key>
 	<string>uDynamo</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Scan Card</string>
 </dict>
 </plist>
